--- a/sass/pages/_secondary.scss
+++ b/sass/pages/_secondary.scss
@@ -12,14 +12,12 @@
 }
 
 .menu {
-
     position: relative;
     bottom: 40px;
     padding: 14px;
     border-radius: 40px 40px 0px 0px;
     background-color: $grey1;
     
-
     &__header {
         display: grid;
         grid-template-columns: 80% 20%;
@@ -27,33 +25,28 @@
         &__title {
             @include font-title;
             font-size: 2.0em;
-
         }
-       
     }
-
 }
 
 .meal {
     display: flex;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    @include overflow;
     background-color: white;
     border-radius: 15px 15px 15px 15px;
     height: 68px;
     animation: collapse 1000ms ease-out 0s 1 normal forwards;
-
+    
     &__heading {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        @include overflow;
         padding: 14px;
     }
 
     &__price {
         margin-left: auto;
         @include flex-end;
+        margin-top: 14px;
+        font-weight: bold;
     }
 
     &__checked {
@@ -62,8 +55,13 @@
         color: white;
         border-radius: 0px 15px 15px 0px;
         width: 68px;
+        min-width: 68px;
         margin-right: -68px;
         transition: 600ms ease-in-out;
+    }
+
+    p , h3 {
+        @include overflow;
     }
 
     span.fas {
@@ -83,31 +81,14 @@
         .meal__checked {
             transition: 600ms ease-in-out;
             margin-right: 0px;
-            
-        }
-
-        p , h3 {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
         }
     }
-
-    p , h3 {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
-
-
-    }
-
+}
 
 .order {
     @include flex-center;
     text-align: center;
     height: 200px;
-    
 }
 
 .line--mint {
