--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -45,3 +45,9 @@
     align-items: center;
     margin-right: 14px;
 }
+
+@mixin overflow {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
